	--no-html, --no-latex, --no-example and --no-chm.

    o	Rcmd SHLIB now uses the same code as on a Unix-alike, and so
	has some extra options.

    o	Package installation will authomatically skip CHM help if the
	HTML Help compiler is not found (instead of trying and failing
	as before).


INSTALLATIOM

    o	The installer now checks for Windows 2000 or later.

    o	Support for cross-building has been withdrawn.


UTILITIES

    o	RSetReg's name for the version-specific Registry entry in
	development versions of R now matches that of the R installer.


CUSTOMIZATION

    o	The name of the producer can be changed in installer/Makefile
	and front-ends/RSetReg.c.




	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.1 patched


BUG FIXES

    o	getwd() could segfault (PR#13424).

    o	dir() does a better job when dir is of rhe form "d:", the
	currrent directory is not the root on that drive, and either
	'full' or 'recursive' is true.
	
    o	Sys.setenv() and Sys.getenv() now use the Windows API
	functions rather than the buggy C runtime functions, allowing
	longer settings, e.g. for a long PATH.


		CHANGES IN R VERSION 2.8.1


NEW FEATURES

    o	R_HOME/bin/helpPRINT.bat now contains an example of use with
	MiKTeX to produce a PDF version of the help file.

    o	Rcmd INSTALL has a new option --pkglock to allow a per-package
	lock directory (useful for parallel installs).


BUG FIXES

    o	The windows() device now works around the total clipping of
 	semi-transparent rectangles and circles that extend outside
 	the device region.
 	
    o	The script editor did not respect user preferences for the
	background colour.
	
    o	normalizePath() no longer returns a garbage string when the
    	input is bad; it now signals an error. (PR#13199)
    	
    o	File share/sh/dcf.sh was not distributed with the binary
    	build. (PR#13200)
